--- a/sass/fonts.scss
+++ b/sass/fonts.scss
@@ -1,5 +1,5 @@
 // Fonts
-@import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,400;0,600;0,700;1,400;1,600;1,700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,600;0,700;1,300;0,400;1,600;1,700&display=swap');
 
 @mixin font-a {
     font-family: 'Open Sans', Arial, Helvetica, sans-serif;
@@ -13,7 +13,7 @@
 @mixin font-b {
     font-family: 'Open Sans', Arial, Helvetica, sans-serif;
     font-size: 48px;
-    font-weight: 400;
+    font-weight: 300;
     line-height: 1;
     @media (max-width: 960px){
         font-size: 36px;
@@ -22,7 +22,7 @@
 @mixin font-c {
     font-family: 'Open Sans', Arial, Helvetica, sans-serif;
     font-size: 36px;
-    font-weight: 400;
+    font-weight: 300;
     line-height: 1.1;
     @media (max-width: 960px){
         font-size: 28px;
@@ -30,8 +30,8 @@
 }
 @mixin font-d {
     font-family: 'Open Sans', Arial, Helvetica, sans-serif;
-    font-size: 24px;
-    font-weight: 400;
+    font-size: 28px;
+    font-weight: 300;
     line-height: 1.3;
     @media (max-width: 960px){
         font-size: 18px;
