--- a/sass/style.css
+++ b/sass/style.css
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,400;0,600;0,700;1,400;1,600;1,700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,600;0,700;1,300;0,400;1,600;1,700&display=swap");
 * {
   margin: 0;
   padding: 0;
@@ -61,7 +61,7 @@ p {
 .f--font-b {
   font-family: "Open Sans", Arial, Helvetica, sans-serif;
   font-size: 48px;
-  font-weight: 400;
+  font-weight: 300;
   line-height: 1;
 }
 @media (max-width: 960px) {
@@ -73,7 +73,7 @@ p {
 .f--font-c {
   font-family: "Open Sans", Arial, Helvetica, sans-serif;
   font-size: 36px;
-  font-weight: 400;
+  font-weight: 300;
   line-height: 1.1;
 }
 @media (max-width: 960px) {
@@ -84,8 +84,8 @@ p {
 
 .f--font-d {
   font-family: "Open Sans", Arial, Helvetica, sans-serif;
-  font-size: 24px;
-  font-weight: 400;
+  font-size: 28px;
+  font-weight: 300;
   line-height: 1.3;
 }
 @media (max-width: 960px) {
@@ -104,6 +104,10 @@ p {
   .f--font-e {
     font-size: 14px;
   }
+}
+
+strong {
+  font-weight: 700 !important;
 }
 
 .f--mb-24 {
@@ -125,7 +129,7 @@ p {
 }
 
 .f--section-a {
-  padding: 8% 0 10% 0;
+  padding: 4% 0 6% 0;
 }
 
 .f--section-b {
@@ -133,7 +137,7 @@ p {
 }
 
 .f--section-c {
-  padding: 0 0 8% 0;
+  padding: 0 0 4% 0;
 }
 
 .f--section-d {
@@ -153,8 +157,8 @@ p {
   padding: 1.15rem 2rem;
   border-radius: 3rem;
   font-family: "Open Sans", Arial, Helvetica, sans-serif;
-  font-size: 24px;
-  font-weight: 400;
+  font-size: 28px;
+  font-weight: 300;
   line-height: 1.3;
   text-decoration: none !important;
   color: #212121;
@@ -207,8 +211,8 @@ p {
   padding: 1.15rem 2rem;
   border-radius: 3rem;
   font-family: "Open Sans", Arial, Helvetica, sans-serif;
-  font-size: 24px;
-  font-weight: 400;
+  font-size: 28px;
+  font-weight: 300;
   line-height: 1.3;
   text-decoration: none !important;
   color: #212121;
@@ -302,8 +306,8 @@ p {
 .b--header-a__main__tagline {
   margin-left: 40px;
   font-family: "Open Sans", Arial, Helvetica, sans-serif;
-  font-size: 24px;
-  font-weight: 400;
+  font-size: 28px;
+  font-weight: 300;
   line-height: 1.3;
 }
 @media (max-width: 960px) {
@@ -317,36 +321,15 @@ p {
   align-items: center;
   height: 100%;
 }
-.b--header-a__content__phone {
-  font-family: "Open Sans", Arial, Helvetica, sans-serif;
-  font-size: 18px;
-  font-weight: 400;
-  line-height: 1.3;
-  font-weight: bold;
-  color: #ee260c;
-  text-decoration: none !important;
+.b--header-a__content__social {
+  display: inline-flex;
 }
-@media (max-width: 960px) {
-  .b--header-a__content__phone {
-    font-size: 14px;
-  }
+.b--header-a__content__social__link {
+  display: block;
+  margin-left: 0.5rem;
 }
-@media (max-width: 960px) {
-  .b--header-a__content__phone {
-    font-size: 12px;
-  }
-}
-.b--header-a__content__phone:hover {
-  color: #fff;
-}
-.b--header-a__content__phone__icon {
-  max-width: 24px;
-  margin-right: 8px;
-}
-@media (max-width: 960px) {
-  .b--header-a__content__phone__icon {
-    max-width: 16px;
-  }
+.b--header-a__content__social__link__icon {
+  max-width: 2rem;
 }
 .b--header-a__content__lang {
   margin-right: 32px;
@@ -407,13 +390,23 @@ p {
   padding: 0 30px;
   text-align: center;
 }
-.b--card-a__hd__media {
-  padding: 20px 60px;
+.b--card-a__hd {
+  padding-bottom: 1rem;
+  border-bottom: 4px #212121 solid;
+}
+.b--card-a__hd:hover .b--card-a__hd__media-wrapper {
+  transform: scale(1.2);
+  transition: all 0.3s ease-in-out;
+}
+.b--card-a__hd__media-wrapper {
+  display: block;
+  padding: 2rem 4rem 0.5rem 4rem;
+  transition: all 0.3s ease-in-out;
 }
 .b--card-a__hd__title {
   font-family: "Open Sans", Arial, Helvetica, sans-serif;
-  font-size: 24px;
-  font-weight: 400;
+  font-size: 28px;
+  font-weight: 300;
   line-height: 1.3;
   color: #ee260c;
   font-weight: 600;
@@ -423,6 +416,84 @@ p {
     font-size: 18px;
   }
 }
+.b--card-a__bd {
+  margin-top: 1.5rem;
+}
+.b--card-a__bd__text {
+  font-family: "Open Sans", Arial, Helvetica, sans-serif;
+  font-size: 18px;
+  font-weight: 400;
+  line-height: 1.3;
+}
+@media (max-width: 960px) {
+  .b--card-a__bd__text {
+    font-size: 14px;
+  }
+}
+
+.b--card-b {
+  background-color: #d6d5d5;
+  padding: 2rem;
+}
+.b--card-b p {
+  font-family: "Open Sans", Arial, Helvetica, sans-serif;
+  font-size: 36px;
+  font-weight: 300;
+  line-height: 1.1;
+}
+@media (max-width: 960px) {
+  .b--card-b p {
+    font-size: 28px;
+  }
+}
+
+.b--card-c {
+  background-color: #f3f2f2;
+  padding: 3rem 6rem 2rem 6rem;
+  margin-bottom: 4%;
+}
+.b--card-c__text {
+  font-family: "Open Sans", Arial, Helvetica, sans-serif;
+  font-size: 28px;
+  font-weight: 300;
+  line-height: 1.3;
+  text-align: center;
+}
+@media (max-width: 960px) {
+  .b--card-c__text {
+    font-size: 18px;
+  }
+}
+.b--card-c__media {
+  margin-top: 2rem;
+}
+
+.b--list-a {
+  list-style: none !important;
+  padding-left: 1rem !important;
+  margin-top: 1.5rem;
+}
+.b--list-a__list-item {
+  display: inline-flex;
+  align-items: top;
+  font-family: "Open Sans", Arial, Helvetica, sans-serif;
+  font-size: 28px;
+  font-weight: 300;
+  line-height: 1.3;
+  margin-bottom: 1rem;
+}
+@media (max-width: 960px) {
+  .b--list-a__list-item {
+    font-size: 18px;
+  }
+}
+.b--list-a__list-item__icon {
+  display: block;
+  max-width: 35px;
+  max-height: 35px;
+  margin-right: 1rem;
+}
+
 .b--cta-a {
   background-color: #f3f2f2;
   padding: 5rem 6rem;
@@ -434,7 +505,7 @@ p {
 .b--cta-a__text {
   font-family: "Open Sans", Arial, Helvetica, sans-serif;
   font-size: 36px;
-  font-weight: 400;
+  font-weight: 300;
   line-height: 1.1;
   color: #ee260c;
 }
@@ -452,25 +523,31 @@ p {
   transition: all 0.3s ease-in-out;
 }
 
-.b--footer-a {
-  padding: 4% 4rem;
+.b--footer-a__main {
   background-color: #212121;
+  padding: 4rem 4%;
 }
 @media (max-width: 960px) {
-  .b--footer-a {
+  .b--footer-a__main {
     padding: 4% 0px;
   }
 }
 .b--footer-a__main__logo {
+  height: 100%;
+  display: flex;
+  justify-content: end;
+  align-items: end;
+}
+.b--footer-a__main__logo__link {
+  display: flex;
+  justify-content: end;
+  align-items: end;
   max-height: 60px;
 }
 @media (max-width: 960px) {
-  .b--footer-a__main__logo {
+  .b--footer-a__main__logo__link {
     max-height: 30px;
   }
-}
-.b--footer-a__main__logo__link {
-  display: block;
 }
 .b--footer-a__main__logo__link__media {
   max-height: 60px;
@@ -480,10 +557,53 @@ p {
     max-height: 30px;
   }
 }
-.b--footer-a__wrapper {
-  display: flex;
-  justify-content: flex-end;
+.b--footer-a__main__content p {
+  color: #fff;
+  font-family: "Open Sans", Arial, Helvetica, sans-serif;
+  font-size: 18px;
+  font-weight: 400;
+  line-height: 1.3;
 }
-.b--footer-a__wrapper__media {
-  margin-left: 4rem;
+@media (max-width: 960px) {
+  .b--footer-a__main__content p {
+    font-size: 14px;
+  }
+}
+.b--footer-a__main__content p a {
+  color: #fff;
+}
+.b--footer-a__main__content p a:hover {
+  color: #ee260c;
+}
+.b--footer-a__bottom {
+  padding: 1% 4rem;
+}
+.b--footer-a__bottom__text {
+  font-family: "Open Sans", Arial, Helvetica, sans-serif;
+  font-size: 18px;
+  font-weight: 400;
+  line-height: 1.3;
+}
+@media (max-width: 960px) {
+  .b--footer-a__bottom__text {
+    font-size: 14px;
+  }
+}
+.b--footer-a__bottom__legal {
+  text-align: right;
+  font-family: "Open Sans", Arial, Helvetica, sans-serif;
+  font-size: 18px;
+  font-weight: 400;
+  line-height: 1.3;
+}
+@media (max-width: 960px) {
+  .b--footer-a__bottom__legal {
+    font-size: 14px;
+  }
+}
+.b--footer-a__bottom__legal a {
+  color: #212121;
+}
+.b--footer-a__bottom__legal a:hover {
+  color: #ee260c;
 }/*# sourceMappingURL=style.css.map */
