--- a/sass/login.css
+++ b/sass/login.css
@@ -1,25 +1,682 @@
-.input {
-  border: 5px solid black;
-  background-color: white;
-  color: black;
-  padding: 14px 28px;
-  font-size: 20px;
-  cursor: pointer;
-  border-color: green;
-  color: green;
+@import url("https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,600;0,700;1,300;0,400;1,600;1,700&display=swap");
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: content-box;
 }
 
-.btn {
-  border: 2px solid black;
-  background-color: white;
-  color: black;
-  padding: 14px 28px;
+body {
   font-size: 16px;
-  cursor: pointer;
-  border-color: green;
-  color: green;
+  font-family: "Frutiger LT Std", Arial, Helvetica, sans-serif;
 }
-.btn:hover {
-  background-color: greenyellow;
-  color: white;
+
+img {
+  max-width: 100%;
+}
+
+p {
+  margin-bottom: 0px !important;
+}
+
+.f--color-a {
+  color: #212121;
+}
+
+.f--color-b {
+  color: #ee260c;
+}
+
+.f--color-c {
+  color: #fff;
+}
+
+.f--color-d {
+  color: #d6d5d5;
+}
+
+.f--color-e {
+  color: #f3f2f2;
+}
+
+.f--bg-a {
+  background-color: #d6d5d5;
+}
+
+.f--bg-b {
+  background-color: #f3f2f2;
+}
+
+.f--font-a {
+  font-family: "Open Sans", Arial, Helvetica, sans-serif;
+  font-size: 60px;
+  font-weight: 400;
+  line-height: 1.1;
+}
+@media (max-width: 960px) {
+  .f--font-a {
+    font-size: 60px;
+  }
+}
+
+.f--font-b {
+  font-family: "Open Sans", Arial, Helvetica, sans-serif;
+  font-size: 48px;
+  font-weight: 300;
+  line-height: 1;
+}
+@media (max-width: 960px) {
+  .f--font-b {
+    font-size: 36px;
+  }
+}
+
+.f--font-c {
+  font-family: "Open Sans", Arial, Helvetica, sans-serif;
+  font-size: 36px;
+  font-weight: 300;
+  line-height: 1.1;
+}
+@media (max-width: 960px) {
+  .f--font-c {
+    font-size: 28px;
+  }
+}
+
+.f--font-d {
+  font-family: "Open Sans", Arial, Helvetica, sans-serif;
+  font-size: 28px;
+  font-weight: 300;
+  line-height: 1.3;
+}
+@media (max-width: 960px) {
+  .f--font-d {
+    font-size: 18px;
+  }
+}
+
+.f--font-e {
+  font-family: "Open Sans", Arial, Helvetica, sans-serif;
+  font-size: 18px;
+  font-weight: 400;
+  line-height: 1.3;
+}
+@media (max-width: 960px) {
+  .f--font-e {
+    font-size: 14px;
+  }
+}
+
+strong {
+  font-weight: 700 !important;
+}
+
+.f--mb-24 {
+  margin-bottom: 24px;
+}
+
+.f--mb-32 {
+  margin-bottom: 32px;
+}
+
+.f--mb-64 {
+  margin-bottom: 64px;
+}
+
+@media (max-width: 960px) {
+  .f--mb-lg-24 {
+    margin-bottom: 24px;
+  }
+}
+
+.f--section-a {
+  padding: 4% 0 6% 0;
+}
+
+.f--section-b {
+  padding: 12% 0 0 0;
+}
+
+.f--section-c {
+  padding: 0 0 4% 0;
+}
+
+.f--section-d {
+  padding: 8% 0 4% 0;
+}
+
+.f--section-e {
+  padding: 252px 0 0 0;
+}
+
+.f--bold {
+  font-weight: 900;
+}
+
+.b--btn-a {
+  display: inline-block;
+  padding: 1.15rem 2rem;
+  border-radius: 3rem;
+  font-family: "Open Sans", Arial, Helvetica, sans-serif;
+  font-size: 28px;
+  font-weight: 300;
+  line-height: 1.3;
+  text-decoration: none !important;
+  color: #212121;
+  transition: all ease-in-out 0.3s;
+  background-color: #ee260c;
+}
+@media (max-width: 960px) {
+  .b--btn-a {
+    font-size: 18px;
+  }
+}
+@media (max-width: 960px) {
+  .b--btn-a {
+    padding: 0.7rem 1.14rem;
+    font-family: "Open Sans", Arial, Helvetica, sans-serif;
+    font-size: 18px;
+    font-weight: 400;
+    line-height: 1.3;
+  }
+}
+@media (max-width: 960px) and (max-width: 960px) {
+  .b--btn-a {
+    font-size: 14px;
+  }
+}
+.b--btn-a:hover {
+  border-radius: 0px;
+  color: #212121;
+  transition: all ease-in-out 0.3s;
+}
+.b--btn-a:hover {
+  color: #fff;
+}
+.b--btn-a--second {
+  padding: 1rem 2rem;
+  font-family: "Open Sans", Arial, Helvetica, sans-serif;
+  font-size: 18px;
+  font-weight: 400;
+  line-height: 1.3;
+  font-weight: bold;
+}
+@media (max-width: 960px) {
+  .b--btn-a--second {
+    font-size: 14px;
+  }
+}
+
+.b--btn-b {
+  display: inline-block;
+  padding: 1.15rem 2rem;
+  border-radius: 3rem;
+  font-family: "Open Sans", Arial, Helvetica, sans-serif;
+  font-size: 28px;
+  font-weight: 300;
+  line-height: 1.3;
+  text-decoration: none !important;
+  color: #212121;
+  transition: all ease-in-out 0.3s;
+  background-color: #fff;
+}
+@media (max-width: 960px) {
+  .b--btn-b {
+    font-size: 18px;
+  }
+}
+@media (max-width: 960px) {
+  .b--btn-b {
+    padding: 0.7rem 1.14rem;
+    font-family: "Open Sans", Arial, Helvetica, sans-serif;
+    font-size: 18px;
+    font-weight: 400;
+    line-height: 1.3;
+  }
+}
+@media (max-width: 960px) and (max-width: 960px) {
+  .b--btn-b {
+    font-size: 14px;
+  }
+}
+.b--btn-b:hover {
+  border-radius: 0px;
+  color: #212121;
+  transition: all ease-in-out 0.3s;
+}
+.b--btn-b:hover {
+  color: #ee260c;
+}
+
+.sticky-top {
+  top: 200px !important;
+  z-index: 100 !important;
+}
+.sticky-top--second {
+  top: 156px !important;
+}
+@media (max-width: 960px) {
+  .sticky-top--second {
+    top: 78px !important;
+  }
+}
+
+.b--header-a {
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  margin-top: 0;
+  width: 100%;
+  background-color: #fff;
+  padding: 3rem 4rem;
+  z-index: 300;
+}
+@media (max-width: 960px) {
+  .b--header-a {
+    padding: 1.5rem 0px;
+    margin: 0px;
+    height: 78px;
+  }
+}
+.b--header-a__main {
+  display: flex;
+  flex-direction: row;
+  justify-content: start;
+  align-items: end;
+}
+.b--header-a__main__logo {
+  max-height: 60px;
+}
+@media (max-width: 960px) {
+  .b--header-a__main__logo {
+    max-height: 30px;
+  }
+}
+.b--header-a__main__logo__link {
+  display: block;
+}
+.b--header-a__main__logo__link__media {
+  max-height: 60px;
+}
+@media (max-width: 960px) {
+  .b--header-a__main__logo__link__media {
+    max-height: 30px;
+  }
+}
+.b--header-a__main__tagline {
+  margin-left: 40px;
+  font-family: "Open Sans", Arial, Helvetica, sans-serif;
+  font-size: 28px;
+  font-weight: 300;
+  line-height: 1.3;
+}
+@media (max-width: 960px) {
+  .b--header-a__main__tagline {
+    font-size: 18px;
+  }
+}
+.b--header-a__content {
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+  height: 100%;
+}
+.b--header-a__content__social {
+  display: inline-flex;
+}
+.b--header-a__content__social__link {
+  display: block;
+  margin-left: 0.5rem;
+}
+.b--header-a__content__social__link__icon {
+  max-width: 2rem;
+}
+.b--header-a__content__lang {
+  margin-right: 32px;
+}
+@media (max-width: 960px) {
+  .b--header-a__content__lang {
+    margin-left: 12px;
+  }
+}
+.b--header-a__content__lang__text {
+  font-family: "Open Sans", Arial, Helvetica, sans-serif;
+  font-size: 18px;
+  font-weight: 400;
+  line-height: 1.3;
+  color: #d6d5d5;
+  margin: 0;
+}
+@media (max-width: 960px) {
+  .b--header-a__content__lang__text {
+    font-size: 14px;
+  }
+}
+.b--header-a__content__lang__text a {
+  font-family: "Open Sans", Arial, Helvetica, sans-serif;
+  font-size: 18px;
+  font-weight: 400;
+  line-height: 1.3;
+  color: #d6d5d5;
+  text-decoration: none;
+  font-weight: 900;
+}
+@media (max-width: 960px) {
+  .b--header-a__content__lang__text a {
+    font-size: 14px;
+  }
+}
+@media (max-width: 960px) {
+  .b--header-a__content__lang__text a {
+    font-size: 12px;
+  }
+}
+.b--header-a__content__lang__text a:hover {
+  color: #212121;
+  text-decoration: none;
+}
+
+.b--hero-a {
+  margin-top: 155px;
+  height: calc(100vh - 155px);
+  width: 100vw;
+  overflow: hidden;
+}
+.b--hero-a__media {
+  bottom: 0;
+}
+
+.b--card-a {
+  padding: 0 30px;
+  text-align: center;
+}
+.b--card-a__hd {
+  padding-bottom: 1rem;
+  border-bottom: 4px #212121 solid;
+}
+.b--card-a__hd:hover .b--card-a__hd__media-wrapper {
+  transform: scale(1.2);
+  transition: all 0.3s ease-in-out;
+}
+.b--card-a__hd__media-wrapper {
+  display: block;
+  padding: 2rem 4rem 0.5rem 4rem;
+  transition: all 0.3s ease-in-out;
+}
+.b--card-a__hd__title {
+  font-family: "Open Sans", Arial, Helvetica, sans-serif;
+  font-size: 28px;
+  font-weight: 300;
+  line-height: 1.3;
+  color: #ee260c;
+  font-weight: 600;
+}
+@media (max-width: 960px) {
+  .b--card-a__hd__title {
+    font-size: 18px;
+  }
+}
+.b--card-a__bd {
+  margin-top: 1.5rem;
+}
+.b--card-a__bd__text {
+  font-family: "Open Sans", Arial, Helvetica, sans-serif;
+  font-size: 18px;
+  font-weight: 400;
+  line-height: 1.3;
+}
+@media (max-width: 960px) {
+  .b--card-a__bd__text {
+    font-size: 14px;
+  }
+}
+
+.b--card-b {
+  background-color: #d6d5d5;
+  padding: 2rem;
+}
+.b--card-b p {
+  font-family: "Open Sans", Arial, Helvetica, sans-serif;
+  font-size: 36px;
+  font-weight: 300;
+  line-height: 1.1;
+}
+@media (max-width: 960px) {
+  .b--card-b p {
+    font-size: 28px;
+  }
+}
+
+.b--card-c {
+  background-color: #f3f2f2;
+  padding: 3rem 6rem 2rem 6rem;
+  margin-bottom: 4%;
+}
+.b--card-c__text {
+  font-family: "Open Sans", Arial, Helvetica, sans-serif;
+  font-size: 28px;
+  font-weight: 300;
+  line-height: 1.3;
+  text-align: center;
+}
+@media (max-width: 960px) {
+  .b--card-c__text {
+    font-size: 18px;
+  }
+}
+.b--card-c__media {
+  margin-top: 2rem;
+}
+
+.b--list-a {
+  list-style: none !important;
+  padding-left: 1rem !important;
+  margin-top: 1.5rem;
+}
+.b--list-a__list-item {
+  display: inline-flex;
+  align-items: top;
+  font-family: "Open Sans", Arial, Helvetica, sans-serif;
+  font-size: 28px;
+  font-weight: 300;
+  line-height: 1.3;
+  margin-bottom: 1rem;
+}
+@media (max-width: 960px) {
+  .b--list-a__list-item {
+    font-size: 18px;
+  }
+}
+.b--list-a__list-item__icon {
+  display: block;
+  max-width: 35px;
+  max-height: 35px;
+  margin-right: 1rem;
+}
+
+.b--cta-a {
+  background-color: #f3f2f2;
+  padding: 5rem 6rem;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  text-decoration: none !important;
+}
+.b--cta-a__text {
+  font-family: "Open Sans", Arial, Helvetica, sans-serif;
+  font-size: 36px;
+  font-weight: 300;
+  line-height: 1.1;
+  color: #ee260c;
+}
+@media (max-width: 960px) {
+  .b--cta-a__text {
+    font-size: 28px;
+  }
+}
+.b--cta-a__media {
+  max-height: 100px;
+  transition: all 0.3s ease-in-out;
+}
+.b--cta-a:hover .b--cta-a__media {
+  transform: translateX(10px);
+  transition: all 0.3s ease-in-out;
+}
+
+.b--footer-a__main {
+  background-color: #212121;
+  padding: 4rem 4%;
+}
+@media (max-width: 960px) {
+  .b--footer-a__main {
+    padding: 4% 0px;
+  }
+}
+.b--footer-a__main__logo {
+  height: 100%;
+  display: flex;
+  justify-content: end;
+  align-items: end;
+}
+.b--footer-a__main__logo__link {
+  display: flex;
+  justify-content: end;
+  align-items: end;
+  max-height: 60px;
+}
+@media (max-width: 960px) {
+  .b--footer-a__main__logo__link {
+    max-height: 30px;
+  }
+}
+.b--footer-a__main__logo__link__media {
+  max-height: 60px;
+}
+@media (max-width: 960px) {
+  .b--footer-a__main__logo__link__media {
+    max-height: 30px;
+  }
+}
+.b--footer-a__main__content p {
+  color: #fff;
+  font-family: "Open Sans", Arial, Helvetica, sans-serif;
+  font-size: 18px;
+  font-weight: 400;
+  line-height: 1.3;
+}
+@media (max-width: 960px) {
+  .b--footer-a__main__content p {
+    font-size: 14px;
+  }
+}
+.b--footer-a__main__content p a {
+  color: #fff;
+}
+.b--footer-a__main__content p a:hover {
+  color: #ee260c;
+}
+.b--footer-a__bottom {
+  padding: 1% 4rem;
+}
+.b--footer-a__bottom__text {
+  font-family: "Open Sans", Arial, Helvetica, sans-serif;
+  font-size: 18px;
+  font-weight: 400;
+  line-height: 1.3;
+}
+@media (max-width: 960px) {
+  .b--footer-a__bottom__text {
+    font-size: 14px;
+  }
+}
+.b--footer-a__bottom__legal {
+  text-align: right;
+  font-family: "Open Sans", Arial, Helvetica, sans-serif;
+  font-size: 18px;
+  font-weight: 400;
+  line-height: 1.3;
+}
+@media (max-width: 960px) {
+  .b--footer-a__bottom__legal {
+    font-size: 14px;
+  }
+}
+.b--footer-a__bottom__legal a {
+  color: #212121;
+}
+.b--footer-a__bottom__legal a:hover {
+  color: #ee260c;
+}
+
+.b--login-header-a {
+  padding: 4% 8% 0 8%;
+  text-align: center;
+}
+.b--login-header-a__media {
+  max-width: 300px;
+}
+
+.b--form-a {
+  width: 100%;
+}
+.b--form-a__field {
+  width: 100% !important;
+  display: block;
+  margin-bottom: 2rem;
+}
+.b--form-a__field__label {
+  text-align: center;
+  font-family: "Open Sans" !important;
+  font-weight: 300 !important;
+  font-size: 15px !important;
+  line-height: 22px !important;
+  color: rgba(33, 33, 33, 0.6);
+}
+.b--form-a__field__input {
+  width: 100%;
+  padding: 0 12px;
+  border-radius: 2px;
+  border-color: #d6d5d5 !important;
+  border-width: 1px !important;
+  outline: none !important;
+  box-sizing: border-box !important;
+  box-shadow: none !important;
+  text-shadow: none !important;
+  cursor: text !important;
+  font-size: 15px !important;
+  height: 40px !important;
+  margin: 0 !important;
+  display: block;
+}
+.b--form-a__btn-wrapper {
+  width: 100% !important;
+  display: block;
+  margin-top: 3rem;
+}
+.b--form-a__btn-wrapper__btn {
+  width: 100%;
+  background-color: #ee260c !important;
+  color: #fff;
+  border-radius: 0 !important;
+  border: 0px transparent solid;
+  padding: 15px 22px !important;
+  vertical-align: middle !important;
+  height: auto !important;
+  font-family: "Open Sans" !important;
+  font-weight: 300 !important;
+  font-size: 15px;
+  cursor: pointer !important;
+  box-shadow: none;
+  text-shadow: none;
+  font-family: inherit;
+  outline: none !important;
+  margin: 0;
+  opacity: 1;
+  transition: all 0.3s ease-in-out;
+}
+.b--form-a__btn-wrapper__btn:hover {
+  box-shadow: 0 20px 38px rgba(0, 0, 0, 0.16) !important;
+  transform: translateY(-3px);
+  opacity: 0.85;
+  transition: all 0.3s ease-in-out;
 }/*# sourceMappingURL=login.css.map */
