--- a/sass/login.scss
+++ b/sass/login.scss
@@ -1,25 +1,76 @@
-.input{
-    border: 5px solid black;
-    background-color: white;
-    color: black;
-    padding: 14px 28px;
-    font-size: 20px;
-    cursor: pointer;
-    border-color: green;
-    color: green;
+// general css
+@import './style.scss';
+
+
+.b--login-header-a{
+    padding: 4% 8% 0 8%;
+    text-align: center;
+    &__media{
+        max-width: 300px;
+    }
 }
 
-.btn{
-    border: 2px solid black;
-    background-color: white;
-    color: black;
-    padding: 14px 28px;
-    font-size: 16px;
-    cursor: pointer;
-    border-color: green;
-    color: green;
-    &:hover{
-        background-color: greenyellow;
-        color: white;
+.b--form-a{
+    width: 100%;
+    &__field{
+        width: 100%!important;
+        display: block;
+        margin-bottom: $measure*2;
+        &__label{
+            text-align: center;
+            font-family: 'Open Sans'!important;
+            font-weight: 300!important;
+            font-size: 15px !important;
+            line-height: 22px !important;
+            color: rgba($color-a, 0.6);
+        }
+        &__input{
+            width: 100%;
+            padding: 0 12px;
+            border-radius: 2px;
+            border-color: $color-d!important;
+            border-width: 1px!important;
+            outline: none!important;
+            box-sizing: border-box !important;
+            box-shadow: none !important;
+            text-shadow: none!important;
+            cursor: text !important;
+            font-size: 15px !important;
+            height: 40px !important;
+            margin: 0 !important;
+            display: block;
+        }
+    }
+    &__btn-wrapper{
+        width: 100%!important;
+        display: block;
+        margin-top: $measure*3;
+        &__btn{
+            width: 100%;
+            background-color: $color-b!important;
+            color: $color-c;
+            border-radius: 0!important;
+            border: 0px transparent solid;
+            padding: 15px 22px!important;
+            vertical-align: middle !important;
+            height: auto !important;
+            font-family: 'Open Sans'!important;
+            font-weight: 300!important;
+            font-size: 15px;
+            cursor: pointer !important;
+            box-shadow: none;
+            text-shadow: none;
+            font-family: inherit;
+            outline: none !important;
+            margin: 0;
+            opacity: 1;
+            transition: all 0.3s ease-in-out;
+            &:hover{
+                box-shadow: 0 20px 38px rgba(0,0,0,.16)!important;
+                transform: translateY(-3px);
+                opacity: 0.85;
+                transition: all 0.3s ease-in-out;
+            }
+        }
     }
 }
