--- a/sass/style.css
+++ b/sass/style.css
@@ -395,6 +395,9 @@ strong {
 .b--card-a__hd {
   padding-bottom: 1rem;
   border-bottom: 4px #212121 solid;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
   min-height: 405px;
 }
 @media (max-width: 1400px) {
@@ -408,7 +411,7 @@ strong {
   }
 }
 .b--card-a__hd:hover .b--card-a__hd__media-wrapper {
-  transform: scale(1.2);
+  transform: scale(1.1);
   transition: all 0.3s ease-in-out;
 }
 .b--card-a__hd__media-wrapper {
@@ -436,6 +439,13 @@ strong {
 }
 .b--card-a__bd {
   margin-top: 1.5rem;
+  opacity: 0;
+  transition: all 0.3s ease-in-out;
+}
+@media (max-width: 960px) {
+  .b--card-a__bd {
+    opacity: 1;
+  }
 }
 .b--card-a__bd__text {
   font-family: "Open Sans", Arial, Helvetica, sans-serif;
@@ -447,6 +457,10 @@ strong {
   .b--card-a__bd__text {
     font-size: 14px;
   }
+}
+.b--card-a:hover .b--card-a__bd {
+  opacity: 1;
+  transition: all 0.3s ease-in-out;
 }
 
 .b--card-b {
