--- a/sass/style.css
+++ b/sass/style.css
@@ -54,7 +54,7 @@ p {
 }
 @media (max-width: 960px) {
   .f--font-a {
-    font-size: 60px;
+    font-size: 38px;
   }
 }
 
@@ -66,7 +66,7 @@ p {
 }
 @media (max-width: 960px) {
   .f--font-b {
-    font-size: 36px;
+    font-size: 32px;
   }
 }
 
@@ -78,7 +78,7 @@ p {
 }
 @media (max-width: 960px) {
   .f--font-c {
-    font-size: 28px;
+    font-size: 26px;
   }
 }
 
@@ -273,9 +273,8 @@ strong {
 }
 @media (max-width: 960px) {
   .b--header-a {
-    padding: 1.5rem 0px;
+    padding: 1.2rem 1rem;
     margin: 0px;
-    height: 78px;
   }
 }
 .b--header-a__main {
@@ -284,12 +283,17 @@ strong {
   justify-content: start;
   align-items: end;
 }
+@media (max-width: 960px) {
+  .b--header-a__main {
+    justify-content: center;
+  }
+}
 .b--header-a__main__logo {
   max-height: 60px;
 }
 @media (max-width: 960px) {
   .b--header-a__main__logo {
-    max-height: 30px;
+    max-height: 60px;
   }
 }
 .b--header-a__main__logo__link {
@@ -300,11 +304,12 @@ strong {
 }
 @media (max-width: 960px) {
   .b--header-a__main__logo__link__media {
-    max-height: 30px;
+    max-height: 60px;
   }
 }
 .b--header-a__main__tagline {
   margin-left: 40px;
+  width: auto;
   font-family: "Open Sans", Arial, Helvetica, sans-serif;
   font-size: 28px;
   font-weight: 300;
@@ -315,11 +320,22 @@ strong {
     font-size: 18px;
   }
 }
+@media (max-width: 960px) {
+  .b--header-a__main__tagline {
+    margin-left: 30px;
+    font-size: 14px;
+  }
+}
 .b--header-a__content {
   display: flex;
   justify-content: flex-end;
   align-items: center;
   height: 100%;
+}
+@media (max-width: 960px) {
+  .b--header-a__content {
+    margin-top: 0.5rem;
+  }
 }
 .b--header-a__content__social {
   display: inline-flex;
@@ -331,12 +347,18 @@ strong {
 .b--header-a__content__social__link__icon {
   max-width: 2rem;
 }
+@media (max-width: 960px) {
+  .b--header-a__content__social__link__icon {
+    max-width: 1.5rem;
+  }
+}
 .b--header-a__content__lang {
   margin-right: 32px;
 }
 @media (max-width: 960px) {
   .b--header-a__content__lang {
     margin-left: 12px;
+    margin-right: 1rem;
   }
 }
 .b--header-a__content__lang__text {
@@ -382,6 +404,12 @@ strong {
   width: 100vw;
   overflow: hidden;
   background-color: #e43340;
+}
+@media (max-width: 960px) {
+  .b--hero-a {
+    margin-top: 127px;
+    height: auto;
+  }
 }
 .b--hero-a__media {
   bottom: 0;
@@ -467,6 +495,11 @@ strong {
   background-color: #d6d5d5;
   padding: 2rem;
 }
+@media (max-width: 960px) {
+  .b--card-b {
+    margin-bottom: 2rem;
+  }
+}
 .b--card-b p {
   font-family: "Open Sans", Arial, Helvetica, sans-serif;
   font-size: 36px;
@@ -475,7 +508,7 @@ strong {
 }
 @media (max-width: 960px) {
   .b--card-b p {
-    font-size: 28px;
+    font-size: 26px;
   }
 }
 
@@ -483,6 +516,11 @@ strong {
   background-color: #f3f2f2;
   padding: 3rem 6rem 2rem 6rem;
   margin-bottom: 4%;
+}
+@media (max-width: 960px) {
+  .b--card-c {
+    padding: 2rem 1rem 2rem 1rem;
+  }
 }
 .b--card-c__text {
   font-family: "Open Sans", Arial, Helvetica, sans-serif;
@@ -525,6 +563,13 @@ strong {
   max-height: 35px;
   margin-right: 1rem;
 }
+@media (max-width: 960px) {
+  .b--list-a__list-item__icon {
+    max-width: 20px;
+    max-height: 20px;
+    margin-top: 2px;
+  }
+}
 
 .b--cta-a {
   background-color: #f3f2f2;
@@ -533,6 +578,11 @@ strong {
   justify-content: space-between;
   align-items: center;
   text-decoration: none !important;
+}
+@media (max-width: 960px) {
+  .b--cta-a {
+    padding: 2rem 2rem;
+  }
 }
 .b--cta-a__text {
   font-family: "Open Sans", Arial, Helvetica, sans-serif;
@@ -543,7 +593,7 @@ strong {
 }
 @media (max-width: 960px) {
   .b--cta-a__text {
-    font-size: 28px;
+    font-size: 26px;
   }
 }
 .b--cta-a__media {
@@ -554,6 +604,11 @@ strong {
   transform: translateX(10px);
   transition: all 0.3s ease-in-out;
 }
+@media (max-width: 960px) {
+  .b--cta-a:hover .b--cta-a__media {
+    transform: translateX(0px);
+  }
+}
 
 .b--footer-a__main {
   background-color: #212121;
@@ -561,7 +616,7 @@ strong {
 }
 @media (max-width: 960px) {
   .b--footer-a__main {
-    padding: 4% 0px;
+    padding: 3rem 0px;
   }
 }
 .b--footer-a__main__logo {
@@ -569,6 +624,12 @@ strong {
   display: flex;
   justify-content: end;
   align-items: end;
+}
+@media (max-width: 960px) {
+  .b--footer-a__main__logo {
+    display: block;
+    margin-top: 2rem;
+  }
 }
 .b--footer-a__main__logo__link {
   display: flex;
@@ -578,7 +639,8 @@ strong {
 }
 @media (max-width: 960px) {
   .b--footer-a__main__logo__link {
-    max-height: 30px;
+    max-height: 60px;
+    display: block;
   }
 }
 .b--footer-a__main__logo__link__media {
@@ -586,7 +648,7 @@ strong {
 }
 @media (max-width: 960px) {
   .b--footer-a__main__logo__link__media {
-    max-height: 30px;
+    max-height: 60px;
   }
 }
 .b--footer-a__main__content p {
@@ -610,6 +672,11 @@ strong {
 .b--footer-a__bottom {
   padding: 1% 4rem;
 }
+@media (max-width: 960px) {
+  .b--footer-a__bottom {
+    padding: 2rem 0px;
+  }
+}
 .b--footer-a__bottom__text {
   font-family: "Open Sans", Arial, Helvetica, sans-serif;
   font-size: 18px;
@@ -631,6 +698,12 @@ strong {
 @media (max-width: 960px) {
   .b--footer-a__bottom__legal {
     font-size: 14px;
+  }
+}
+@media (max-width: 960px) {
+  .b--footer-a__bottom__legal {
+    text-align: left;
+    margin-top: 1rem;
   }
 }
 .b--footer-a__bottom__legal a {
